1、优化系统配置方式
